GMSD-72: LOGIN - Missing "Eye" Icon for Showing Password on Reset and Change Password Pages

--- a/Coditech.Project/Admin/Coditech.Admin/Views/User/ChangePassword.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/User/ChangePassword.cshtml
@@ -38,9 +38,8 @@
                                         </div>
                                         <div class="form-group mb-2">
                                             @Html.LabelFor(x => x.NewPassword, new { @class = "form-label required" })
-                                            <div class="input-group password-input-wraper">
-                                                @Html.PasswordFor(x => x.NewPassword, new { @class = "form-control password-input" })
-                                                <i class="fas fa-eye view-password"></i>
+                                            <div class="input-group">
+                                                @Html.PasswordFor(x => x.NewPassword, new { @class = "form-control" })
                                             </div>
                                             @Html.ValidationMessageFor(m => m.NewPassword, null)
                                         </div>
