--- a/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryGeneralItemMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryGeneralItemMaster/CreateEdit.cshtml
@@ -73,7 +73,7 @@
 
                                 <div class="col-lg-3">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.InventoryProductDimentionGroupId, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.InventoryProductDimentionGroupId, new { @class = "form-label" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", inventoryProductDimensionGroup)
                                         @Html.ValidationMessageFor(x => x.InventoryProductDimentionGroupId)
                                     </div>
