--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymWorkoutPlan/WorkoutPlanDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymWorkoutPlan/WorkoutPlanDetails.cshtml
@@ -5,6 +5,7 @@
     string actionName = ViewContext.RouteData.Values["action"].ToString();
     Dictionary<string, string> keyValuePairs = new Dictionary<string, string>();
     keyValuePairs.Add("GymWorkoutPlanId", Model.GymWorkoutPlanModel.GymWorkoutPlanId.ToString());
+    ModelPopUpViewModel addGymWorkoutPlanDetailsModel = new ModelPopUpViewModel() { ModelPopUpId = "AddGymWorkoutPlanDetailsModelPopupId", ModalContentId = "AddGymWorkoutPlanDetailsContentId" };
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -28,43 +29,44 @@
                             <h5>Plan Duration : @Model.GymWorkoutPlanModel.NumberOfWeeks weeks</h5>
                             @for (int week = 1; week <= Model.GymWorkoutPlanModel.NumberOfWeeks; week++)
                             {
-                                        <div class="col-lg-12 mb-3">
-                                            <div class="card">
-                                                <div class="card-header d-flex justify-content-between">
-                                                    <h4 class="card-title">Week @week</h4>
-                                                    <div class="d-flex justify-content-end">
-                                                        <a data-bs-toggle="modal" data-bs-target="" href="void javascritp(0)" onclick="GymWorkoutDetails.AddGymWorkoutPlanDetails()" title="Add " class="btn btn-sm btn-soft-success btn-circle float-end"><i class="fas ti-plus"></i></a>                       
-                                                        <a href="../@controllerName/Delete?" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
-                                                    </div>
-                                                </div>
-                                                <div class="card-body">
-                                                    <div class="row">
-                                                @for (int day = 1; day <= Model.GymWorkoutPlanModel.NumberOfDaysPerWeek; day++)
-                                                {
-                                                                    <div class="col-lg-6 mb-3">
-                                                                        <div class="card">
-                                                                            <div class="card-header">
-                                                                                        <h4 class="card-title">Day @day</h4>
-                                                                                        <div class="d-flex justify-content-end">
-                                                                                            <a data-bs-toggle="modal" data-bs-target="" href="void javascritp(0)" onclick="GymWorkoutDetails.AddGymWorkoutPlanDetails()" title="Add " class="btn btn-sm btn-soft-success btn-circle float-end"><i class="fas ti-plus"></i></a>
-                                                                                            <a href="../@controllerName/Delete?" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
-                                                                                        </div>
-                                                                            </div>
-                                                                            <div class="card-body">
-                                                                                        No Result Found
+                                <div class="col-lg-12 mb-3">
+                                    <div class="card">
+                                        <div class="card-header d-flex justify-content-between">
+                                            <h4 class="card-title">Week @week</h4>
+                                            <div class="d-flex justify-content-end">
+                                                <a data-bs-toggle="modal" data-bs-target="#@addGymWorkoutPlanDetailsModel.ModelPopUpId" href="void javascritp(0)" onclick="GymWorkoutPlan.AddWorkoutPlanDetails('@addGymWorkoutPlanDetailsModel.ModalContentId','@Model.GymWorkoutPlanModel.GymWorkoutPlanId','@week')" title="Add " class="btn btn-sm btn-soft-success btn-circle float-end"><i class="fas ti-plus"></i></a>
 
-                                                                                        <div class="text-center mt-3">
-                                                                                            <button type="button" class="btn btn-success" onclick="addWorkout(@week)">Add Workout</button>
-                                                                                        </div>
-                                                                            </div>
-                                                                        </div>
-                                                                    </div>
-                                                }
-                                                    </div>
-                                                    
-                                                </div>
+                                                <a href="../@controllerName/Delete?" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                                             </div>
                                         </div>
+                                        <div class="card-body">
+                                            <div class="row">
+                                                @for (int day = 1; day <= Model.GymWorkoutPlanModel.NumberOfDaysPerWeek; day++)
+                                                {
+                                                    <div class="col-lg-6 mb-3">
+                                                        <div class="card">
+                                                            <div class="card-header">
+                                                                <h4 class="card-title">Day @day</h4>
+                                                                <div class="d-flex justify-content-end">
+                                                                    <a data-bs-toggle="modal" data-bs-target="#@addGymWorkoutPlanDetailsModel.ModelPopUpId" href="javascritp:void(0)" onclick="GymWorkoutPlan.AddWorkoutPlanDetails('@addGymWorkoutPlanDetailsModel.ModalContentId','@Model.GymWorkoutPlanModel.GymWorkoutPlanId','@week','@day')" title="Add " class="btn btn-sm btn-soft-success btn-circle float-end"><i class="fas ti-plus"></i></a>
+                                                                    <a href="../@controllerName/Delete?" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                                                </div>
+                                                            </div>
+                                                            <div class="card-body">
+                                                                No Result Found
+
+                                                                <div class="text-center mt-3">
+                                                                    <button type="button" class="btn btn-success" onclick="addWorkout(@day)">Add Workout</button>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                }
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
                             }
                         </div>
                     </div>
@@ -73,3 +75,11 @@
         </div>
     </div>
 </div>
+@Html.Partial("~/Views/Shared/_ModelPopUp.cshtml", addGymWorkoutPlanDetailsModel)
+@section scripts {
+    <!-- end page content -->
+    <script src="~/js/coditech/gym/GymWorkoutPlan.js"></script>
+}
+
+
+
