--- a/Coditech.Project/Admin/Coditech.Admin/Views/User/Login.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/User/Login.cshtml
@@ -13,7 +13,7 @@
     <!-- Tab panes -->
     <div class="tab-content">
         <div class="tab-pane active p-3" id="LogIn_Tab" role="tabpanel">
-            @using (Html.BeginForm("Login", "User", FormMethod.Post))
+            @using (Html.BeginForm("Login", "User", "DBTMNewRegistration", FormMethod.Post))
             {
                 @Html.AntiForgeryToken()
                 <div class="form-group mb-2">
@@ -42,12 +42,20 @@
                     <div class="col-sm-6 text-end">
                         <a href="/user/resetpassword" class="text-muted font-13 forgot-password"><i class="dripicons-lock"></i>Forgot password?</a>
                     </div>
+                   @*  <div class="col-sm-6 text-end">
+                        <a href="/dbtmnewregistration/newregistration" class="text-muted font-13 New-Registration"><i class="dripicons-lock"></i>New Registration?</a>
+                    </div> *@
                 </div>
                 <div class="form-group mb-0 row">
                     <div class="col-12">
                         <button class="btn btn-primary w-100 waves-effect waves-light">Log In<i class="fas fa-sign-in-alt ms-1"></i></button>
                     </div>
-                </div>
+                    </div>
+                     <div class="form-group mb-9 row">
+                    <div class="col-sm-10 text-end">
+                        <a href="/dbtmnewregistration/newregistration" class="text-muted font-13 New-Registration">Don't have an account? <i class="dripicons-to-do"></i> New Registration</a>
+                    </div>
+                </div> 
                 @Html.HiddenFor(x => x.ReturnUrl)
             }
         </div>
