--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMTraineeAssignment/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMTraineeAssignment/List.cshtml
@@ -3,8 +3,9 @@
     ViewBag.Title = "DBTM Trainee Assignment List";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
-    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "DBTMTraineeAssignment.GetTrainerByCentreCode()" };
-    DropdownViewModel trainerDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.CentrewiseDBTMTrainer.ToString(), DropdownName = "GeneralTrainerMasterId", DropdownSelectedValue = Convert.ToString(Model.GeneralTrainerMasterId), Parameter = Model.SelectedCentreCode, ChangeEvent = "CoditechCommon.LoadListByCentreCodeAndDepartmentId('" + @controllerName + "','" + @actionName + "')" };
+    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "DBTMTraineeAssignment.GetDBTMTrainerListByCentreCode()" };
+    DropdownViewModel trainerDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.CentrewiseDBTMTrainer.ToString(), DropdownName = "SelectedParameter1", DropdownSelectedValue = Convert.ToString(Model.GeneralTrainerMasterId), ChangeEvent = "DBTMTraineeAssignment.GetDBTMTrainerListByGeneralTrainerMasterId('" + @controllerName + "','" + @actionName + "')" };
+    
 };
 
 <!-- Page Content-->
@@ -27,19 +28,19 @@
                                 @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
                             </div>
                             <div class="col-md-1">
-                                <label>@AdminResources.LabelTrainer</label>
+                                <label>Trainer</label>
                             </div>
                             <div class="col-md-3">
                                 @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", trainerDropdown)
                             </div>
                             <div class="col-md-1">
-                                <input type="button" class="btn btn-success" value="Show" id="ShowDataId" onclick="CoditechCommon.LoadListByCentreCodeAndDepartmentId('@controllerName','@actionName')" />
+                                <input type="button" class="btn btn-success" value="Show" id="ShowDataId" onclick="DBTMTraineeAssignment.GetDBTMTrainerListByGeneralTrainerMasterId('@controllerName','@actionName')" />
                             </div>
                         </div>
                     </div>
                     <div class="card-body">
                         <div id="DataTablesDivId" class="dataTables_wrapper dt-bootstrap5 no-footer">
-                            @Html.Partial("~/Views/DBTMTraineeAssignment/_List.cshtml", Model)
+                            @Html.Partial("~/Views/DBTM/DBTMTraineeAssignment/_List.cshtml", Model)
                         </div>
                     </div>
                 </div>
@@ -48,3 +49,4 @@
     </div>
 </div>
 <!-- end page content -->
+<script src="~/js/coditech/DBTM/DBTMTraineeAssignment.js"></script> 
