GMSD-189: HMS - Hospital Doctor Visiting Charges List Fails to Update After Modification.

--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/_List.cshtml
@@ -25,7 +25,7 @@
                             <td>@item.EmailId</td>
                             <td>@item.MedicalSpecilization</td>
                             <td class="text-center">
-                                <a href="../@controllerName/GetHospitalDoctorVisitingChargesByDoctorIdList?hospitalDoctorId=@item.HospitalDoctorId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a>@* <span class="m-2">|</span> *@
+                                <a href="../@controllerName/GetHospitalDoctorVisitingChargesByDoctorIdList?SelectedParameter1=@item.HospitalDoctorId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a>@* <span class="m-2">|</span> *@
 @*                                 <a href="../@controllerName/Delete?hospitalDoctorIds=@item.HospitalDoctorId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
  *@                            </td>
                         </tr>
