--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/HospitalDoctorVisitingChargesByDoctorIdList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/HospitalDoctorVisitingChargesByDoctorIdList.cshtml
@@ -12,7 +12,7 @@
 				<div class="card">
 					<div class="card-header">
 						<span class="card-title">Hospital Doctor Visiting Charges List: @Model.FirstName @Model.LastName</span>
-						<a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create?hospitalDoctorId=@Model.HospitalDoctorId" role="button"><i class="fas fa-plus me-2"></i>Add Visiting Charges</a>
+						<a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create?hospitalDoctorId=@Model.SelectedParameter1" role="button"><i class="fas fa-plus me-2"></i>Add Visiting Charges</a>
 					</div>
 					<div class="card-body">
 						<div id="DataTablesDivId" class="dataTables_wrapper dt-bootstrap5 no-footer">
