--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/_HospitalDoctorVisitingChargesByDoctorIdList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/_HospitalDoctorVisitingChargesByDoctorIdList.cshtml
@@ -12,6 +12,7 @@
     <div class="col-sm-12 table-responsive">
         <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
             @Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
+            @Html.HiddenFor(x => x.SelectedParameter1)
             <tbody>
                 @if (Model?.HospitalDoctorVisitingChargesList?.Count > 0)
                 {
@@ -28,8 +29,8 @@
                             <td>@item.AppointmentType</td>
                             <td>@AdminGeneralHelper.FormatPriceWithCurrency(@item.Charges)</td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?HospitalDoctorVisitingChargesId=@item.HospitalDoctorVisitingChargesId&hospitalDoctorId=@Model.HospitalDoctorId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a>@* <span class="m-2">|</span> *@
-                                <a href="../@controllerName/Delete?HospitalDoctorVisitingChargesId=@item.HospitalDoctorVisitingChargesId&hospitalDoctorId=@Model.HospitalDoctorId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                <a href="../@controllerName/Edit?HospitalDoctorVisitingChargesId=@item.HospitalDoctorVisitingChargesId&hospitalDoctorId=@Model.SelectedParameter1" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a>@* <span class="m-2">|</span> *@
+                                <a href="../@controllerName/Delete?HospitalDoctorVisitingChargesId=@item.HospitalDoctorVisitingChargesId&hospitalDoctorId=@Model.SelectedParameter1" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
                         </tr>
                     }
