GMSD-176: GYM - Attendance Saving Without Mandatory Field in Gym Member Attendance Details

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GeneralPersonAttendanceDetails/_CreateEditGeneralPersonAttendanceDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GeneralPersonAttendanceDetails/_CreateEditGeneralPersonAttendanceDetails.cshtml
@@ -37,6 +37,7 @@
            DropdownName = "GeneralAttendanceStateEnumId",
            GroupCode = DropdownTypeEnum.AttendanceState.ToString(),
            IsTextValueSame = true,
+           IsStringProperty = true,
            ChangeEvent = "GymMemberDetails.DisplayCheckInCheckOutDiv()"
        })
 
