--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/_List.cshtml
@@ -41,8 +41,8 @@
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)
                             </td>
                             <td class="text-center">
-                                <a href="../@controllerName/UpdateEmployeePersonalDetails?employeeId=@item.EmployeeId&personId=@item.PersonId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?employeeIds=@item.EmployeeId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                <a href="../@controllerName/UpdateEmployeePersonalDetails?employeeId=@item.EmployeeId&personId=@item.PersonId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a>@* <span class="m-2">|</span> *@
+                                @* <a href="../@controllerName/Delete?employeeIds=@item.EmployeeId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a> *@
                             </td>
                         </tr>
                     }
