--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientRegistration/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientRegistration/_List.cshtml
@@ -36,8 +36,8 @@
                             <td>@item.Gender</td>
                             <td>@item.MobileNumber</td>                           
                             <td class="text-center">
-                                <a href="../@controllerName/UpdatePatientPersonalDetails?hospitalPatientRegistrationId=@item.HospitalPatientRegistrationId&personId=@item.PersonId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?hospitalPatientRegistrationIds=@item.HospitalPatientRegistrationId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                <a href="../@controllerName/UpdatePatientPersonalDetails?hospitalPatientRegistrationId=@item.HospitalPatientRegistrationId&personId=@item.PersonId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a>@* <span class="m-2">|</span> *@
+                                @* <a href="../@controllerName/Delete?hospitalPatientRegistrationIds=@item.HospitalPatientRegistrationId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a> *@
                             </td>
                         </tr>
                     }
