--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientAppointment/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientAppointment/_List.cshtml
@@ -25,7 +25,7 @@
                             <td>@item.AppointmentType</td>
                             <td>@item.AppointmentDate</td>
                             <td>@item.RequestedTimeSlot</td>
-                            <td>@item.ApprovalStatusEnumId</td>
+                            <td>@item.ApprovalStatus</td>
                             <td>
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsAttended)
                             </td>
