GMSD-180: HMS - Spelling Error in "Specialization" Field in Hospital Doctor List

--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralTrainerMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralTrainerMaster/_List.cshtml
@@ -35,7 +35,7 @@
                             <td>@item.LastName</td>
                             <td>@item.MobileNumber</td>
                             <td>@item.EmailId</td>
-                            <td>@item.TrainerSpecilization</td>
+                            <td>@item.TrainerSpecialization</td>
                             <td class="text-center">
                                 <a href="../@controllerName/Edit?generalTrainerId=@item.GeneralTrainerMasterId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
                                 <a href="../@controllerName/Delete?generalTrainerIds=@item.GeneralTrainerMasterId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
