--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralTrainerMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralTrainerMaster/CreateEdit.cshtml
@@ -71,14 +71,14 @@
                                     }
                                     <div class="col-lg-6">
                                         <div class="mb-3">
-                                            @Html.LabelFor(x => x.TrainerSpecilizationEnumId, new { @class = "form-label required " })
+                                            @Html.LabelFor(x => x.TrainerSpecializationEnumId, new { @class = "form-label required " })
                                             @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                    {
-                                       DropdownSelectedValue = Model.TrainerSpecilizationEnumId.ToString(),
-                                       DropdownName = "TrainerSpecilizationEnumId",
-                                       GroupCode = DropdownTypeEnum.TrainerSpecilization.ToString()
+                                       DropdownSelectedValue = Model.TrainerSpecializationEnumId.ToString(),
+                                       DropdownName = "TrainerSpecializationEnumId",
+                                       GroupCode = DropdownTypeEnum.TrainerSpecialization.ToString()
                                    })
-                                            @Html.ValidationMessageFor(x => x.TrainerSpecilizationEnumId)
+                                            @Html.ValidationMessageFor(x => x.TrainerSpecializationEnumId)
                                         </div>
                                     </div>
                                 </div>
