--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorOPDSchedule/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorOPDSchedule/_List.cshtml
@@ -23,7 +23,7 @@
                             <td>@item.LastName</td>
                             <td>@item.MobileNumber</td>
                             <td>@item.EmailId</td>
-                            <td>@item.MedicalSpecilization</td>
+                            <td>@item.MedicalSpecialization</td>
                             <td class="text-center">
                                 <a href="../@controllerName/Edit?hospitalDoctorId=@item.HospitalDoctorId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a>
                             </td>
