Code Correction - For Hospital Patient Appoinment date column

--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientAppointment/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientAppointment/_List.cshtml
@@ -23,7 +23,7 @@
                             <td>@item.LastName</td>
                             <td>@item.MobileNumber</td>
                             <td>@item.AppointmentType</td>
-                            <td>@item.AppointmentDate</td>
+                            <td>@item.AppointmentDate.ToCoditechDateFormat()</td>
                             <td>@item.RequestedTimeSlot</td>
                             <td>@item.ApprovalStatus</td>
                             <td>
