--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymWorkoutPlan/WorkoutPlanDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymWorkoutPlan/WorkoutPlanDetails.cshtml
@@ -1,10 +1,10 @@
-﻿@model GymWorkoutPlanDetailsViewModel
+﻿@model GymWorkoutPlanViewModel
 @{
     ViewBag.Title = "Gym Workout Plan Details";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
     Dictionary<string, string> keyValuePairs = new Dictionary<string, string>();
-    keyValuePairs.Add("GymWorkoutPlanId", Model.GymWorkoutPlanModel.GymWorkoutPlanId.ToString());
+    keyValuePairs.Add("GymWorkoutPlanId", Model.GymWorkoutPlanId.ToString());
     ModelPopUpViewModel addGymWorkoutPlanDetailsModel = new ModelPopUpViewModel() { ModelPopUpId = "AddGymWorkoutPlanDetailsModelPopupId", ModalContentId = "AddGymWorkoutPlanDetailsContentId" };
 }
 <!-- Page Content-->
@@ -19,44 +19,84 @@
                     <div class="card-header">
                         <div class="row align-items-center">
                             <div class="col">
-                                <h4 class="card-title">Workout Plan Details- @Model.GymWorkoutPlanModel.WorkoutPlanName</h4>
+                                <h4 class="card-title">Workout Plan Details- @Model.WorkoutPlanName</h4>
                             </div><!--end col-->
                         </div>  <!--end row-->
                     </div>
                     <div class="card-body">
                         <div class="row">
-                            <h5>Target : @Model.GymWorkoutPlanModel.Target kg</h5>
-                            <h5>Plan Duration : @Model.GymWorkoutPlanModel.NumberOfWeeks weeks</h5>
-                            @for (int week = 1; week <= Model.GymWorkoutPlanModel.NumberOfWeeks; week++)
+                            <h5>Target : @Model.Target kg</h5>
+                            <h5>Plan Duration : @Model.NumberOfWeeks weeks</h5>
+                            @for (int week = 1; week <= Model.NumberOfWeeks; week++)
                             {
                                 <div class="col-lg-12 mb-3">
                                     <div class="card">
                                         <div class="card-header d-flex justify-content-between">
                                             <h4 class="card-title">Week @week</h4>
                                             <div class="d-flex justify-content-end">
-                                                <a data-bs-toggle="modal" data-bs-target="#@addGymWorkoutPlanDetailsModel.ModelPopUpId" href="void javascritp(0)" onclick="GymWorkoutPlan.AddWorkoutPlanDetails('@addGymWorkoutPlanDetailsModel.ModalContentId','@Model.GymWorkoutPlanModel.GymWorkoutPlanId','@week')" title="Add " class="btn btn-sm btn-soft-success btn-circle float-end"><i class="fas ti-plus"></i></a>
+                                                <a data-bs-toggle="modal" data-bs-target="#@addGymWorkoutPlanDetailsModel.ModelPopUpId" href="void javascritp(0)" onclick="GymWorkoutPlan.AddWorkoutPlanDetails('@addGymWorkoutPlanDetailsModel.ModalContentId','@Model.GymWorkoutPlanId','@week')" title="Add " class="btn btn-sm btn-soft-success btn-circle float-end"><i class="fas ti-plus"></i></a>
 
                                                 <a href="../@controllerName/Delete?" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                                             </div>
                                         </div>
                                         <div class="card-body">
                                             <div class="row">
-                                                @for (int day = 1; day <= Model.GymWorkoutPlanModel.NumberOfDaysPerWeek; day++)
+                                                @for (int day = 1; day <= Model.NumberOfDaysPerWeek; day++)
                                                 {
                                                     <div class="col-lg-6 mb-3">
                                                         <div class="card">
                                                             <div class="card-header">
                                                                 <h4 class="card-title">Day @day</h4>
                                                                 <div class="d-flex justify-content-end">
-                                                                    <a data-bs-toggle="modal" data-bs-target="#@addGymWorkoutPlanDetailsModel.ModelPopUpId" href="javascritp:void(0)" onclick="GymWorkoutPlan.AddWorkoutPlanDetails('@addGymWorkoutPlanDetailsModel.ModalContentId','@Model.GymWorkoutPlanModel.GymWorkoutPlanId','@week','@day')" title="Add " class="btn btn-sm btn-soft-success btn-circle float-end"><i class="fas ti-plus"></i></a>
+                                                                    <a data-bs-toggle="modal" data-bs-target="#@addGymWorkoutPlanDetailsModel.ModelPopUpId" href="javascritp:void(0)" onclick="GymWorkoutPlan.AddWorkoutPlanDetails('@addGymWorkoutPlanDetailsModel.ModalContentId','@Model.GymWorkoutPlanId','@week','@day')" title="Add " class="btn btn-sm btn-soft-success btn-circle float-end"><i class="fas ti-plus"></i></a>
                                                                     <a href="../@controllerName/Delete?" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                                                                 </div>
                                                             </div>
                                                             <div class="card-body">
-                                                                No Result Found
-
+                                                                @if (Model.GymWorkoutPlanDetailList.Any(x => x.WorkoutDay == day && x.WorkoutWeek == week))
+                                                                {
+                                                                    <table class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;">
+                                                                        <thead>
+                                                                            <tr>
+                                                                                <th>
+                                                                                    Workout Name
+                                                                                </th>
+                                                                                <th>Set</th>
+                                                                                <th></th>
+                                                                                <th></th>
+                                                                            </tr>
+                                                                        </thead>
+                                                                        @foreach (var item in @Model.GymWorkoutPlanDetailList.Where(x => x.WorkoutDay == day && x.WorkoutWeek == week))
+                                                                        {
+                                                                            int count = 1;
+                                                                            foreach (var item1 in item.GymWorkoutPlanSetList)
+                                                                            {
+                                                                                if (count == 1)
+                                                                                {
+                                                                                    <tr>
+                                                                                        <th rowspan="@item.GymWorkoutPlanSetList.Count">@item.WorkoutName</th>
+                                                                                        <th rowspan="@item.GymWorkoutPlanSetList.Count">@item.GymWorkoutPlanSetList.Count</th>
+                                                                                        <td>@item1.Weight Kg @item1.Repetitions Rep @item1.Duration Sec</td>
+                                                                                        <th rowspan="@item.GymWorkoutPlanSetList.Count"><a href="#" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a></th>
+                                                                                    </tr>
+                                                                                }
+                                                                                else
+                                                                                {
+                                                                                    <tr>
+                                                                                        <td>@item1.Weight Kg @item1.Repetitions rep @item1.Duration sec</td>
+                                                                                    </tr>
+                                                                                }
+                                                                                count++;
+                                                                            }
+                                                                        }
+                                                                    </table>
+                                                                }
+                                                                else
+                                                                {
+                                                                    <span>No Workouts added</span>
+                                                                }
                                                                 <div class="text-center mt-3">
-                                                                    <button type="button" class="btn btn-success" onclick="addWorkout(@day)">Add Workout</button>
+                                                                    <button data-bs-toggle="modal" data-bs-target="#@addGymWorkoutPlanDetailsModel.ModelPopUpId" href="javascritp:void(0)" onclick="GymWorkoutPlan.AddWorkoutPlanDetails('@addGymWorkoutPlanDetailsModel.ModalContentId','@Model.GymWorkoutPlanId','@week','@day')" type="button" class="btn btn-success" >Add Workout</button>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -80,6 +120,5 @@
     <!-- end page content -->
     <script src="~/js/coditech/gym/GymWorkoutPlan.js"></script>
 }
-
 
 
