--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/MediaUpload.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/MediaUpload.cshtml
@@ -94,7 +94,7 @@
 
         function showContextMenu(event, folderId, folderName) {
             event.preventDefault();
-            $(".dropdown-menu").hide();
+            $(".dropdown-menu-md").hide();
 
             const menu = document.getElementById('contextMenu');
             const folderElement = event.currentTarget;
