--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaManagerDetails/_MediaDetails.cshtml
@@ -44,7 +44,7 @@
 
                 <div class="card">
                     <div class="card-body">
-                        <h6 class="mt-0 mb-0">@Model.TotalFileSize MB Used</h6>
+                        <h6 class="mt-0 mb-0">Storage Used : @Model.TotalFileSize MB</h6>
                     </div><!--end card-body-->
                 </div><!--end card-->
             </div>
@@ -77,7 +77,7 @@
 </div>
 
 <div class="modal fade" id="createFolderModal" tabindex="-1" aria-labelledby="createFolderModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="createFolderModalLabel">Create Folder</h5>
@@ -102,7 +102,7 @@
 
 
 <div class="modal fade" id="renameFolderModal" tabindex="-1" aria-labelledby="renameFolderModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="renameFolderModalLabel">Rename Folder</h5>
@@ -126,7 +126,7 @@
 </div>
 
 <div class="modal fade" id="moveFolderModal" tabindex="-1" aria-labelledby="moveFolderModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="moveFolderModalLabel">Move Folder</h5>
@@ -152,7 +152,7 @@
 </div>
 
 <div class="modal fade" id="deleteFolderModal" tabindex="-1" aria-labelledby="deleteFolderModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="deleteFolderModalLabel">Delete Folder</h5>
@@ -173,7 +173,7 @@
 </div>
 
 <div class="modal fade" id="deleteFileModal" tabindex="-1" aria-labelledby="deleteFileModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="deleteFileModalLabel">Delete File</h5>
